# ChangeLog for dev-perl/Data-Validate-Domain
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Validate-Domain/ChangeLog,v 1.2 2014/12/07 13:22:31 zlogene Exp $

  07 Dec 2014; Mikle Kolyada <zlogene@gentoo.org>
  Data-Validate-Domain-0.100.0.ebuild:
  Drop dev-lang/perl dependency

*Data-Validate-Domain-0.100.0 (25 Sep 2014)

  25 Sep 2014; Tony Vroon <chainsaw@gentoo.org>
  +Data-Validate-Domain-0.100.0.ebuild, +metadata.xml:
  Initial commit, ebuild by g-cpan with some minor tweaks by me.