@@ -2,15 +2,25 @@
 Hash: SHA256
 
 DIST Data-Validate-Domain-0.10.tar.gz 7988 SHA256 be17fbc945c8ab3faac8870bed99704c023919863e583c56b43e9df05ef7a39a SHA512 d6ba6f63ef09cdb92f65d96451109ee0104b3ced164800cc07939b368d53d37043753e659d46ca8586bf8614c2c1908dc5ca36a5e7ffaae94e4a822a8fd44653 WHIRLPOOL d799bef9734870f22724bebd59a2f34360d1a1b145f4be2301bbb89a8fc8350771cd4175dc4c6e0e5db83bbcc2bf262b7510848f3d433b57a3e207556804ba1c
-EBUILD Data-Validate-Domain-0.100.0.ebuild 504 SHA256 dd10481c73cafc40c4ad0d80db30e09df4298938f267375f355681e87f2180ef SHA512 506d1006179ac261247af1868f774189e9a7383a36ff9f789723e81eda32915e9282c162718bf0d7de647c4e79f3e21fef4e7b4ccc439abe5881c27311b7b67f WHIRLPOOL e55b890291a4bf8bded372dd8d2d79d084084876f7816527fdb6854a9fa27153c3435b99e22dd335765863311842cbef7b50efe57dfe1a0f8467a827f54c39a8
-MISC ChangeLog 567 SHA256 b5a97fcee11b69963b6dd22463b53cc1b8532df45beaf73959c351a40a5ae2c2 SHA512 f2d045e622bf53d1d67de9adf459e521568c3309f145a094404c56b4d988a94f535418bde209d58ac541aa88c8af14706c534da1aad1616c564b3db8953cb9dc WHIRLPOOL 2110211e9bc50b95639a63910f36ebe5ae3f9fc5ae8508fa24742c2e03bcc183c503b4f79e5e1fb02dd58d235f1a709bdceb3c22321af4d743564649fa94ca68
+EBUILD Data-Validate-Domain-0.100.0.ebuild 537 SHA256 ebc7462731eec4d42d7a53baf5fc0b5d1f0509066323dac4aa8ba6273c9ef516 SHA512 17d2313603646a3401b574573c6e6f447b159e2ca6678312af5f1d6e38fb5a993b96687ad5c7860799857c1e721c7505cd35ef410178d40879ce9ce39629658c WHIRLPOOL 99557f023a07723a1b589b0b3ed9ca3d6fdc240e9e3c1ec5136389a94bde51893d45015c87c4ef84a321d025888067e1ca26305df491ed503173f0d5516684ce
+MISC ChangeLog 697 SHA256 8d75ea24fde7f9f630e662e1c49738b19ed7c95a56db9ba4a58053e56df58796 SHA512 1830fdf5120e27b61c3b3f714cba78b91a204a10cb17e75f20bbf65167244fe150f0017c1a5c13eb7fbae626cf9593ac063b4498332d18f56143a9da8dd89dbd WHIRLPOOL 058b13290ae7082a99e9db683ac7d217307d5182bc210c5705da4eacf82622a957692fe111f01cb1befe4f39c5c48fdb2d6710ad4b240dbe8e373c714c997cca
 MISC metadata.xml 246 SHA256 02ed66f1492ae6c64643e09029fca519c4677bf2f768cb40e464bed475a89a67 SHA512 f237c818876f95b74a6935d469b23919ea5a6a0a3b6fb2f337cd20f994512aaafcc62e44c1ddad36795a3a7ac002a71b65d75da0ec4700b276392153734143a0 WHIRLPOOL 3e43726a86d81ed0a75e6aa6ee347d3a59c7de12c9b7006a0d0fd2f5808124dacef0f0e9a0ed3b61b645411940512558880d7810bed7317b787b5a41240fbd9f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlSEVD8ACgkQG9wOWsQutdYVkwP/XxgwSkBBVmFA2CrHrKHE3tds
-0bwfmw0VCeVRe9X21fi5mtPIs+FOv3Msf4cBEl8KU+rbQth7MS0HN+vZSWWT/hd8
-DYRXXyJwGNroO98Sr7uQIRb4aeBTdwtny1oo22nYbcvfX8AhXQSvrpAzAhuztuw6
-oOB/M5E1u3c9yX9D7mY=
-=SqX8
+iQJ8BAEBCABmBQJUi3ZGXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcaYcP/AuLZfqFNnKjCNDBpEvEyZpM
+wSsueINSuyokJaasrwAwXdeAmJOucTQrCa/Nm70fYDitJIYEF+vMZ4pCbUQ9mxTe
+h66IGXOYfnxIETvm8zqv/K+2ZG1wt3oc++ZYU+Z+X7TmqhDJCZX3VDNUOtjiidfD
+PWekCXyYqYiDCcXj1Zz5b6ZLDUvL55nn9g8a4Q1V5wX8U97A8+aeYGeQg3uHmkmt
+TMMDFPyba0A3y7mbBHYT+A67obY9R1iN71C9ngtzupuIJbGUyHDymPY9Tb7I0Nf2
+9lZIGIz/uCBn0in70YEb6WhGqWZFHpa0wjDr8Q6QzaKPbS1Q4JwSH4KVYFqio5EH
+TWgEEtKhw8QDVF1RJSKT95pwwnGpHjjHdRUYTjDLJqH5oCnW12sn51Q/wsJyCwvI
+gfMSvOEj+mjhuRUWwqTwYzHteFx3PITJYRmWeheccnqwvaSDfyq9UsCirblnG8my
+q+/tIixA3Mtrlrxx9olxtgjaPyYa+rZI7KvAWdvjDnPF3mBy6egE0xvR+pt1keVT
+N2s0uhKy8+cMLk7B5cs1b7m7d1VYggw11GfWPZCnpQ2UbOH0DP5BEMnPQGG9sV/n
+gsDwSUM/BwjXF2DIveqhJ4z1y8lhBZtMN+iZs1XAKRbu7SJCfQi6IDBVlk2TK2sp
+kkzH8aryQ9lArFf8sWBW
+=3FRF
 -----END PGP SIGNATURE-----
