@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Data-Validate-Domain
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Validate-Domain/ChangeLog,v 1.2 2014/12/07 13:22:31 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Validate-Domain/ChangeLog,v 1.3 2014/12/12 23:12:05 dilfridge Exp $
+
+  12 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  Data-Validate-Domain-0.100.0.ebuild:
+  Add test support, bug 524552
 
   07 Dec 2014; Mikle Kolyada <zlogene@gentoo.org>
   Data-Validate-Domain-0.100.0.ebuild:
